--- a/src/app/assets/css/main.css
+++ b/src/app/assets/css/main.css
@@ -1,4 +1,5 @@
 @import '../../utils/bootstrap/css/vapor/bootstrap.min.css';
+/* @import './home.css'; */
 @import './road.css';
 @import './toast.css';
 @import './car.css';
@@ -6,6 +7,16 @@
 @import './tree.css';
 @import './menus.css';
 @import './overridesBootstrap.css';
+
+@font-face {
+    font-family: 'StreetDripsExtrude';
+    src: url('../fonts/StreetDripsExtrude.ttf');
+}
+
+@font-face {
+    font-family: 'StreetDrips';
+    src: url('../fonts/StreetDrips.otf');
+}
 
 a {
     text-decoration: none;
@@ -64,10 +75,4 @@ input {
 .no-scroolbars {
     /* display: none; */
     scrollbar-width: none !important;
-}
-
-/* For tests */
-
-.row {
-    /* background-color: rgba(255, 0, 0, 0.301); */
 }
