--- a/src/app/assets/css/menus.css
+++ b/src/app/assets/css/menus.css
@@ -2,10 +2,13 @@
 .obstacle-preview {
     width: 100% !important;
     height: 300px !important;
+    background-image: url('../img/svg/obstacle.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 50%;
 
-    background-color: red;
+    filter: drop-shadow(1px 1px 4px rgb(76, 0, 255));
 }
 
-.obstacle-rules-info{
-    
-}
+/* .obstacle-rules-info {
+} */
