--- a/src/app/assets/css/main.css
+++ b/src/app/assets/css/main.css
@@ -1,5 +1,6 @@
 @import '../../utils/bootstrap/css/vapor/bootstrap.min.css';
 /* @import './home.css'; */
+@import './obstacles.css';
 @import './road.css';
 @import './toast.css';
 @import './car.css';
@@ -47,26 +48,12 @@ html {
 .controls {
     margin-bottom: 8px;
 }
+
 button,
 input {
     margin-right: 6px;
 }
-.node circle {
-    fill: #1f77b4;
-    stroke: #fff;
-    stroke-width: 1px;
-}
-.node text {
-    fill: white;
-    font-size: 12px;
-    text-anchor: middle;
-    dominant-baseline: central;
-}
-.link {
-    stroke: #999;
-    stroke-width: 2px;
-    fill: none;
-}
+
 #status {
     margin-left: 8px;
     color: #8fd;
