--- a/src/app/assets/css/tree.css
+++ b/src/app/assets/css/tree.css
@@ -1,7 +1,15 @@
 #tree-render {
     /* have equal specifity! */
-    /* overflow: scroll; */
-    width: 1000vw;
+    width: 100% !important;
+    height: 90% !important;
+}
+
+#tree-render {
+    /* max-width: 1200px; */
+    /* max-width: 100%;
+    max-height: 100%; */
+    overflow: scroll !important;
+    scrollbar-width: none;
 }
 
 #tree-container {
@@ -9,10 +17,29 @@
     padding: 8px;
     border-radius: 6px;
     flex: 1;
-    width: 95vw;
+    width: 1000%;
     overflow: scroll;
 }
 
 .tree-container {
-    height: calc(50vh - 30px) !important;
+    /* height: calc(50vh - 30px) !important; */
+    /* position: absolute; */
+    /* top: 20vh; */
+}
+
+#tree-render svg {
+    width: 1000%;
+    height: 1000%;
+}
+
+#tree-render svg g :not(.node) {
+}
+
+.controls {
+    margin-bottom: 8px;
+}
+
+button,
+input {
+    margin-right: 6px;
 }
