--- a/src/app/assets/html/road.html
+++ b/src/app/assets/html/road.html
@@ -1,3 +1,3 @@
-<div id="road-container">
+<div class="row h-50 mb-4 visually-hidden" id="road-container">
     <div class="car-ctn" id="ctn-car"></div>
 </div>
