--- a/src/app/assets/css/tree.css
+++ b/src/app/assets/css/tree.css
@@ -1,7 +1,7 @@
 #tree-render {
     /* have equal specifity! */
     width: 100% !important;
-    height: 90% !important;
+    /* height: 90% !important; */
 }
 
 #tree-render {
