--- a/src/app/assets/html/addObstacles.html
+++ b/src/app/assets/html/addObstacles.html
@@ -31,11 +31,7 @@
                         <label class="form-label" for="obstacles-types">Obstacle Type:</label>
                     </div>
                     <div class="col">
-                        <select class="form-control w-100" name="obstacles-types" id="types-obtacles" required>
-                            <option selected>Select Type</option>
-                            <option value="cone">Cone</option>
-                            <option value="rock">Rock</option>
-                        </select>
+                        <select class="form-control w-100" name="obstacles-types" id="types-obtacles" required></select>
                     </div>
                 </div>
             </div>
@@ -45,10 +41,19 @@
         <div class="row">
             <div class="col-6 d-flex flex-wrap align-items-center justify-content-center">
                 <!-- Information about rules -->
-                <div class="row">
-                    <div class="obstacles-rules-info col-12 text-info p-3">
-                        <p>- The maxium <strong>X</strong> is: <span id="max-x-obstacle"></span></p>
-                        <p>- The maxium <strong>Y</strong> is: <span id="max-y-obstacle"></span></p>
+                <div class="row d-flex justify-content-center">
+                    <div class="row d-flex justify-content-center w-100 obstacles-rules-info col-12 text-info p-3">
+                        <!-- Max values: Rules -->
+                        <div class="col-5 ms-1 border border-2 border-info overflow-scroll no-scroolbars d-flex flex-wrap align-items-center">
+                            <p class="text-nowrap m-0 p-0">- Maxium <strong>X</strong>: <span class="text-warning" id="max-x-obstacle"></span></p>
+                            <p class="text-nowrap m-0 p-0">- Maxium <strong>Y</strong>: <span class="text-warning" id="max-y-obstacle"></span></p>
+                        </div>
+
+                        <!-- Min values: Rules -->
+                        <div class="col-5 ms-1 border border-2 border-info overflow-scroll no-scroolbars d-flex flex-wrap align-items-center">
+                            <p class="text-nowrap m-0 p-0">- Minium <strong>X</strong>: <span class="text-warning" id="min-x-obstacle"></span></p>
+                            <p class="text-nowrap m-0 p-0">- Minium <strong>Y</strong>: <span class="text-warning" id="min-y-obstacle"></span></p>
+                        </div>
                     </div>
                 </div>
 
