See #7, Updates and fixes visually, move logo/title to the left side to can preview tree Fine

--- a/src/app/assets/html/roadAddMenu.html
+++ b/src/app/assets/html/roadAddMenu.html
@@ -5,4 +5,7 @@
             <input type="number" name="width-road" class="form-control w-25" min="500" value="500" step="10" id="inp-road-width" placeholder="3500" required />
         </div>
     </div>
+    <div class="row w-100 text-center">
+        <p class="text-info">Minium: <span class="text-warning">500</span></p>
+    </div>
 </form>
