--- a/src/app/assets/html/watchRoads.html
+++ b/src/app/assets/html/watchRoads.html
@@ -1,4 +1,9 @@
 <link rel="stylesheet" href="./app/assets/css/watchRoads.css" />
+
+<div class="position-absolute float-start top-0 mt-2">
+    <button class="btn-back btn btn-primary" id="btn-back">Back</button>
+</div>
+
 <div class="screen-watch-roads h-100 mb-2" id="watch-roads">
     <div class="row header-initial header text-center w-100">
         <h1>Watch Roads</h1>
