See #, small updates, now buttons are disabled initially, to prevent click in places where Controller Is NULL

--- a/src/app/assets/html/watchRoads.html
+++ b/src/app/assets/html/watchRoads.html
@@ -10,6 +10,8 @@
     </div>
 
     <div class="buttons-watch btn-group w-100 mb-2" role="group">
+        <button class="btn btn-primary" id="btn-del">Delete/Remove</button>
+
         <button class="btn btn-primary" id="btn-pre">Pre&minus;Order</button>
 
         <button class="btn btn-primary mx-2" id="btn-in">In&minus;Order</button>
