--- a/src/app/assets/html/home.html
+++ b/src/app/assets/html/home.html
@@ -14,7 +14,7 @@
                     <button class="btn btn-info text-uppercase" id="btn-load-json">Load JSON</button>
                 </div>
                 <div class="mb-1 ms-5 text-center">
-                    <button class="btn btn-info text-uppercase" id="btn-watch-roads">Watch Roads</button>
+                    <button class="btn btn-info text-uppercase" id="btn-watch-roads">Remove & Watch Roads</button>
                 </div>
                 <div class="mb-1 ms-5 text-center">
                     <button class="btn btn-info text-uppercase" id="btn-insert-obstacles">Insert Obstacles</button>
